<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.engatway.fragmentMenu.MenuFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:background="@color/mdtp_dark_gray">

    <TextView
    android:id="@+id/txtHome"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight=".33"
    android:text="@string/home"
    android:gravity="center"
    android:textColor="#fff"/>
    <TextView
    android:id="@+id/txtIntriga"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight=".33"
    android:text="@string/criar_intrigas"
    android:gravity="center"
    android:textColor="#fff"/>
    <TextView
    android:id="@+id/txtPerfil"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight=".33"
    android:text="@string/perfil"
    android:gravity="center"
    android:textColor="#fff"/>
</LinearLayout>

</FrameLayout>
