<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context="com.engatway.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/logoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputEditTextEmail"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:textColor="@color/fontsColorGreyDark"
                android:fontFamily="@font/robotoregular"
                android:hint="@string/hint_email"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="149dp"
                tools:layout_editor_absoluteY="177dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:textColor="@color/topBarColorDark"
                android:fontFamily="@font/robotoregular"
                android:hint="@string/hint_password"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="268dp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txtForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/forgot_pass"
            android:textSize="16sp"
            android:textColor="@color/fontsColorGreyDark"
            android:fontFamily="@font/robotoregular"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@color/topBarColorDark"
            android:fontFamily="@font/robotoregular"
            android:text="@string/text_login"
            android:textColor="@color/branco"
            android:textSize="20sp" />


        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkBoxR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoregular"
            android:textSize="16sp"
            android:textColor="@color/fontsColorGreyDark"
            android:layout_marginTop="10dp"
            android:text="@string/remember_me" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/robotoregular"
            android:layout_marginTop="100dp"
            android:onClick="goToRegister"
            android:text="@string/text_not_member"
            android:textColor="@color/fontsColorGreyDark"
            android:textSize="16sp" />

    </android.support.v7.widget.LinearLayoutCompat>




</android.support.v4.widget.NestedScrollView>
