<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.engatway.CriarIntrigaActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/iconesClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="0dp"

            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:background="@color/iconesClick"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnIntriga"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:background="@color/iconesClick"
            android:gravity="center"
            android:text="@string/criar_intrigas"
            android:textColor="@color/fontsColorDark" />

        <Button
            android:id="@+id/btnPerfil"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:background="@color/iconesClick"
            android:gravity="center"
            android:text="@string/perfil"
            android:textColor="#fff" />
    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/editTextCriarSujeito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="Sujeito"
        android:fontFamily="@font/robotolight"
        android:textSize="20sp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spinnerNovaIntriga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Spinner
        android:id="@+id/spinnerNovaIntriga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextCriarAlvo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCriarSujeito" />

    <AutoCompleteTextView
        android:id="@+id/editTextCriarAlvo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/robotolight"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/alvo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescricaoIntriga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerNovaIntriga" />

    <EditText
        android:id="@+id/editTextDescricaoIntriga"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/descri_o"
        android:fontFamily="@font/robotolight"
        android:textSize="20sp"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/btnRegIntriga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCriarAlvo" />

    <Button
        android:id="@+id/btnRegIntriga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/iconesClick"
        android:fontFamily="@font/robotomedium"
        android:textColor="@color/branco"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:onClick="onCriarIntriga"
        android:text="@string/criar_intriga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescricaoIntriga" />


</android.support.constraint.ConstraintLayout>